Use URLDecoder.decode(String s, Charset charset)